# autopsy

./: .gitignore  NOTICE  POST_V01.md  README.md  pyproject.toml
autopsy/: __init__.py  analyzer.py  baseline.py  cli.py  engine.py  pipeline_adapter.py  report.py  sarif.py  scope.py
autopsy/checks/: __init__.py  cwe119.py  cwe125.py  cwe134.py  cwe190.py  cwe22.py  cwe338.py  cwe362.py  cwe367.py  cwe369.py  cwe377.py  cwe401.py  cwe415.py  cwe415_interproc.py  cwe416.py  cwe416_interproc.py  cwe476.py  cwe676.py  cwe732.py  cwe78.py  cwe787.py
tests/: conftest.py
tests/fixtures/: Makefile  REGENERATE.md  clean-baseline  clean-baseline.c  cwe119-aarch64-stubs.c  cwe119-aarch64-vuln  cwe119-aarch64-vuln.c  cwe119-vuln  cwe119-vuln.c  cwe125-vuln  cwe125-vuln.c  cwe134-aarch64-stubs.c  cwe134-aarch64-vuln  cwe134-aarch64-vuln.c  cwe134-vuln  cwe134-vuln.c  cwe190-aarch64-stubs.c  cwe190-aarch64-vuln  cwe190-aarch64-vuln.c  cwe190-vuln  cwe190-vuln.c  cwe22-vuln  cwe22-vuln.c  cwe338-vuln  cwe338-vuln.c  cwe362-vuln  cwe362-vuln.c  cwe367-vuln  cwe367-vuln.c  cwe369-aarch64-stubs.c  cwe369-aarch64-vuln  cwe369-aarch64-vuln.c  cwe369-vuln  cwe369-vuln.c  cwe377-vuln  cwe377-vuln.c  cwe401-vuln  cwe401-vuln.c  cwe415-aarch64-stubs.c  cwe415-aarch64-vuln  (+34 more)
tests/slow/: test_detection.py
tests/unit/: test_analyzer.py  test_baseline.py  test_cli.py  test_cwe125.py  test_cwe134.py  test_cwe22.py  test_cwe338.py  test_cwe362.py  test_cwe367.py  test_cwe369.py  test_cwe377.py  test_cwe401.py  test_cwe415.py  test_cwe415_interproc.py  test_cwe416.py  test_cwe416_interproc.py  (+17 more)
